# engnr-nsu-cpp-2021

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/buildsteps/linux/: build.sh  install-dependencies.sh
.github/buildsteps/macos/: install-dependencies.sh
.github/buildsteps/windows/: install-dependencies.bat
.github/functional-testing/: main.py
.github/functional-testing/ftlib/: ftutil.py
.github/workflows/: ci.yml
1/: .gitignore  Adler32.cpp  Adler32.h  CMakeLists.txt  Functions.cpp  Hash.cpp  Hash.h  HashCalc.cpp  HashCalc.h  HashFunc.cpp  HashFunc.h  Hasher.cpp  Hasher.h  Help.cpp  Help.h  InputProcessing.cpp  InputProcessing.h  Lab1.cpp  Lab1.h  Main.cpp  README.md  Status.h  Sum64.cpp  Sum64.h  file  funk_adl_sum.cpp  funk_adl_sum.h  hash.cpp  hash.h  hash.hpp  hashFunctions.cpp  hashFunctions.h  hash_funcs.cpp  hash_funcs.h  hasher_func.cpp  hasher_func.h  main.cpp
1/inc/: Hasher.h  Status.h
1/lab1/: main.cpp
2/: .gitignore  Actions.cpp  Actions.h  CMakeLists.txt  Calc.cpp  Calc.h  Calculator.cpp  Calculator.h  Command.cpp  Command.h  CommandCreator.h  CommandFactory.cpp  CommandFactory.h  CommandPreprocessing.cpp  Commands.cpp  Commands.h  Context.h  DS_Store  Errors.cpp  Errors.h  Exceptions.cpp  Exceptions.h  Excpetions.cpp  Excpetions.h  Exeptions.cpp  Exeptions.h  Fabric.cpp  Fabric.h  Functions.cpp  Helper.cpp  Lab_2.cpp  Lab_2.h  MError.h  Main.cpp  MemStack.cpp  MemStack.h  Memory.cpp  Memory.h  Operation.cpp  Operation.h  (+33 more)
2/SafeInt/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
2/Tests/: CMakeLists.txt  Test.cpp
2/__calc_functions__/: Fabric.h  Lab_2.h
2/calc_functions/: Exceptions.h  Functions.cpp  Operations.h
2/cmake_build/: CMakeCache.txt
2/inc/: App.h  ArgParser.h  CalcCmds.h  Calculator.h  exceptions.h
2/lab_c-_1/: Calculator.cpp  main.cpp
2/lib/googletest/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md
2/sborka/: 2  CMakeCache.txt  CTestTestfile.cmake  Makefile  calc  cmake_install.cmake
2/sborka/SafeInt/: Makefile
2/sborka/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/sborka/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/sborka/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/sborka/tests/: CTestTestfile.cmake  Makefile  calculator_tests  cmake_install.cmake
2/src/: App.cpp  ArgParser.cpp  CalcCmds.cpp  Calculator.cpp  Command.cpp  Command.h  Exceptions.cpp  Exceptions.h  commands.cpp  commands.h  exceptions.h  main.cpp
2/src/calc_lib/: App.cpp  ArgParser.cpp  CMakeLists.txt  CalcCmds.cpp
2/src/calculator/: CMakeLists.txt  main.cpp
2/src/commands/: CMakeLists.txt  Command.cpp  Command.h  Exceptions.h  StackCalc.cpp  StackCalc.h
2/test/: CMakeLists.txt  tests.cpp
2/test_files/: T_Functions.cpp  T_Operations.cpp  T_Operations.h
2/tests/: CMakeLists.TXT  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tests.cpp  calc_tests.cpp  calculator_tests.cpp  calculator_tests.vcxproj  calculator_tests.vcxproj.filters  cmake_install.cmake  test.cpp  test1.txt  test2.txt  test5.txt  tests.cpp  tests_all.cpp
2/tests/SafeInt/: Makefile  cmake_install.cmake
2/tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/tests/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
2/tests/test_file/: in_1.txt  in_2.txt  in_3.txt  in_4.txt
2/tests/test_files/: EASY_TEST  EXAMPLE_TEST
2/tests/tests/: CTestTestfile.cmake  Makefile  calculator_tests
3/: .gitignore  CMakeLists.txt  LinkedList.h  LinkedList_tests.cpp  README.md  SafeQueue.cpp  SafeQueue.h  ThreadPool.cpp  ThreadPool.h  main  main.cpp  tests.cpp
3/dirwalker/: SafeQueue.cpp  SafeQueue.h  SafeQueue.tpp  ThreadPool.cpp  ThreadPool.h
3/inc/: iterators.h  linked_list.h  node.h
3/src/: linked_list.tpp
4/: CMakeLists.txt  LaunchManager.cpp  LaunchManager.h  Main.cpp  Program.cpp  README.md  SafeQueue.cpp  SafeQueue.h  Task.h  TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h  UserInterface.cpp  UserInterface.h  WorkManager.cpp  WorkManager.h  Worker.cpp  Worker.h  WorkerPool.cpp  WorkerPool.h  WorkerResult.cpp  WorkerResult.h  main.cpp
4/dirwalker/: SafeQueue.cpp  SafeQueue.h  ThreadPool.h
5/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
5/BattleShip/BaseClasses/: BaseGamer.cpp  BaseGamer.h  BaseView.h
5/BattleShip/Controller/: BattleShipController.cpp  BattleShipController.h  ScenarioViewer.cpp  ScenarioViewer.h
5/BattleShip/Gamers/: ConsoleGamer.cpp  ConsoleGamer.h  ImbalancedGamer.cpp  ImbalancedGamer.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h  Ubivtsa.cpp  Ubivtsa.h
5/BattleShip/Model/: BattleShipModel.cpp  BattleShipModel.h
5/BattleShip/View/: BattleShipView.cpp  BattleShipView.h
5/Scenario/: game_log_0.txt
lab1/: CMakeLists.txt  Hash.cpp  main.cpp
